retiro del websocker
